--- a/IMS456 RESUME/home.html
+++ b/IMS456 RESUME/home.html
@@ -52,7 +52,7 @@
     </strong></font>
   </h2>
   <video width="400" height="300" controls>
-    <source src="video/Video resume Asiah.mp4" type="video/mp4">
+    <source src="https://github.com/asiahhhs/asiah_resume/blob/main/IMS456%20RESUME/video/Video%20resume%20Asiah.mp4" type="video/mp4">
   </video>
 
 
