--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <table width="80%" border="3px" align="center">
-  <body background="picture/photo-1542908782-6e3072d12cd4.jpeg">
+  <body background="backgroundpic.jpeg">
 
 <!--********HEADER SECTION START********-->
     <tr>
