--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <!--********HEADER SECTION START********-->
     <tr>
     <td colspan="2" align="center">
-      <img src="picture/photo_2023-07-11_16-11-09.jpg" width="100%">
+      <img src="header.jpg" width="100%">
     </td>
     </tr>
 <!--********HEADER SECTION END********-->
