--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <!--********HEADER SECTION START********-->
     <tr>
     <td colspan="2" align="center">
-      <img src="header.jpg" width="100%">
+      <img src="https://github.com/asiahhhs/asiah_resume/blob/main/header.jpg" width="100%">
     </td>
     </tr>
 <!--********HEADER SECTION END********-->
