--- a/workexperience.html
+++ b/workexperience.html
@@ -14,7 +14,7 @@
 <!--********HEADER SECTION START********-->
     <tr>
     <td colspan="2" align="center">
-      <img src="" width="100%">
+      <img src="https://github.com/asiahhhs/asiah_resume/blob/9f45b3ca483de14af942f6e149318672408af833/header.jpg" width="100%">
     </td>
     </tr>
 <!--********HEADER SECTION END********-->
