--- a/workexperience.html
+++ b/workexperience.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <table width="80%" border="3px" align="center">
-  <body background="C:\Users\ASIAH\Desktop\ims456\photo-1542908782-6e3072d12cd4.jpeg">
+  <body background="backgroundpic.jpeg">
 
 <!--********HEADER SECTION START********-->
     <tr>
