--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 <tr bgcolor="#828282">
     <td colspan="2" align="center">
     <ul>
-      <li><a href="home.html"><img src="C:\Users\ASIAH\Downloads\home button.jpg" width="150px"/></a></li>
+      <li><a href="home.html"><img src="home button.jpg" width="150px"/></a></li>
       <li><a href="personal.html"><img src="C:\Users\ASIAH\Downloads\personal button.jpg" width="150px"/></a></li>
       <li><a href="education.html"><img src="C:\Users\ASIAH\Downloads\education button.jpg" width="150px"/></a></li>
       <li><a href="workexperience.html"><img src="C:\Users\ASIAH\Downloads\work experience button.jpg" width="150px"/></a></li>
