--- a/education.html
+++ b/education.html
@@ -14,7 +14,7 @@
 <!--********HEADER SECTION START********-->
     <tr>
     <td colspan="2" align="center">
-      <img src="personal button.jpg" width="100%">
+      <img src="header.jpg" width="100%">
     </td>
     </tr>
 <!--********HEADER SECTION END********-->
