--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     <ul>
       <li><a href="home.html"><img src="home button.jpg" width="150px"/></a></li>
       <li><a href="personal.html"><img src="personal button.jpg" width="150px"/></a></li>
-      <li><a href="education.html"><img src="C:\Users\ASIAH\Downloads\education button.jpg" width="150px"/></a></li>
+      <li><a href="education.html"><img src="skills button.jpg" width="150px"/></a></li>
       <li><a href="workexperience.html"><img src="C:\Users\ASIAH\Downloads\work experience button.jpg" width="150px"/></a></li>
       <li><a href="skills.html"><img src="C:\Users\ASIAH\Downloads\skills button.jpg" width="150px"/></a></li>
     </ul>
