--- a/education.html
+++ b/education.html
@@ -12,7 +12,7 @@
   <body background="backgroundpic.jpeg">
 
 <!--********HEADER SECTION START********-->
-    <tr>
+        <tr>
     <td colspan="2" align="center">
       <img src="header.jpg" width="100%">
     </td>
@@ -22,13 +22,13 @@
 <!--********MENU SECTION START********-->
 <tr bgcolor="#828282">
     <td colspan="2" align="center">
-      <ul>
-        <li><a href="home.html"><img src="C:\Users\ASIAH\Downloads\home button.jpg" width="150px"/></a></li>
-        <li><a href="personal.html"><img src="C:\Users\ASIAH\Downloads\personal button.jpg" width="150px"/></a></li>
-        <li><a href="education.html"><img src="C:\Users\ASIAH\Downloads\education button.jpg" width="150px"/></a></li>
-        <li><a href="workexperience.html"><img src="C:\Users\ASIAH\Downloads\work experience button.jpg" width="150px"/></a></li>
-        <li><a href="skills.html"><img src="C:\Users\ASIAH\Downloads\skills button.jpg" width="150px"/></a></li>
-      </ul>
+    <ul>
+      <li><a href="home.html"><img src="home button.jpg" width="150px"/></a></li>
+      <li><a href="personal.html"><img src="personal button.jpg" width="150px"/></a></li>
+      <li><a href="education.html"><img src="education button.jpg" width="150px"/></a></li>
+      <li><a href="workexperience.html"><img src="work experience button.jpg" width="150px"/></a></li>
+      <li><a href="skills.html"><img src="skills button.jpg" width="150px"/></a></li>
+    </ul>
     </td>
     </tr>
 <!--********MENU SECTION END********-->
