--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
     </strong></font>
   </h2>
   <video width="400" height="300" controls>
-    <source src="video/Video resume Asiah.mp4" type="video/mp4">
+    <source src="Video resume Asiah.mp4" type="video/mp4">
   </video>
 
 
