--- a/personal.html
+++ b/personal.html
@@ -41,7 +41,7 @@
 
     <h1 style="font-family:nexa; color:rgb(250, 247, 250);">About Me</h1>
     <hr noshade width="100%"/>
-    <img src="c:\Users\ASIAH\Downloads\photo_2023-06-12_00-22-03.jpg" width="150px"/>
+    <img src="mypicture.jpg" width="150px"/>
     <p style="font-family:arial;"><strong>Title:</strong>My Resume</p>
     <p style="font-family:arial;"><strong>Name:</strong>Asiah Sakinah Binti Suparman</p>
     <p style="font-family:arial;"><strong>Student ID:</strong>2022461286</p>
