--- a/workexperience.html
+++ b/workexperience.html
@@ -49,7 +49,7 @@
   <hr noshade width="100%"/>
 
   <video width="400" height="300" controls>
-    <source src="c:\Users\ASIAH\Downloads\IMG_2814.mp4" type="video/mp4">
+    <source src="IMG_2814.mp4" type="video/mp4">
   </video>
   <p style="font-family: Times New Roman;"><strong>Working Address= Lot 1-11, Kedai Buku Syikah Enterprise, Tingkat 2, Kompleks Sungai Buloh, Bandar Baru Sungai Buloh, Sungai Buloh, 47000 Selangor.</strong></p>
   <p style="font-family:arial;">-Used to work as Cashier and Seller</p>
