--- a/skills.html
+++ b/skills.html
@@ -47,7 +47,7 @@
   <p style="font-family:arial;"><strong>- English = </strong>Good</p>
   <hr noshade width="100%"/>
   <p>
-    <img src="c:\Users\ASIAH\Downloads\6774859.png" alt="microsoftword" align="center" style="width: 100px;"> </p>
+    <img src="word.png" alt="microsoftword" align="center" style="width: 100px;"> </p>
 <h1 style="font-family:garamond; color:rgb(0, 0, 0);"> <font size=5px> <b>MICROSOFT WORD </b></font> </h1>
 <div class="container">
   <div class="skills microsoftword">90%</div>
