--- a/skills.html
+++ b/skills.html
@@ -61,7 +61,7 @@
 </div>
 <hr noshade width="100%"/>
 <p>
-  <img src="C:\Users\ASIAH\Downloads\excel-logo-0.png" alt="microsoftexcel" style="width: 100px;"> </p>
+  <img src="excel-logo-0.png" alt="microsoftexcel" style="width: 100px;"> </p>
 <h1 style="font-family:garamond; color:rgb(0, 0, 0);"> <font size=5px> <b>MICROSOFT EXCEL </b></font></h1>
 <div class="container">
   <div class="skills microsoftexcel">60%</div>
