--- a/skills.html
+++ b/skills.html
@@ -54,7 +54,7 @@
 </div>
 <hr noshade width="100%"/>
 <p>
-  <img src="c:\Users\ASIAH\Downloads\microsoft-powerpoint-logo.png" alt="microsoftpowerpoint" style="width: 100px;"> </p>
+  <img src="microsoft-powerpoint-logo.png" alt="microsoftpowerpoint" style="width: 100px;"> </p>
 <h1 style="font-family:garamond; color:rgb(0, 0, 0);"> <font size=5px> <b>MICROSOFT POWERPOINT</b></font></h1>
 <div class="container">
   <div class="skills microsoftpowerpoint">65%</div>
