--- a/skills.html
+++ b/skills.html
@@ -76,7 +76,7 @@
 </div>
 <hr noshade width="100%"/>
 <p>
-  <img src="C:\Users\ASIAH\Downloads\css3-logo-png-transparent.png" alt="css3" style="width: 100px;"> </p>
+  <img src="css3-logo-png-transparent.png" alt="css3" style="width: 100px;"> </p>
 <h1 style="font-family:garamond; color:rgb(0, 0, 0);"> <font size=5px> <b>CSS 3</b></font></h1>
 
 <div class="container">
