--- a/skills.html
+++ b/skills.html
@@ -68,7 +68,7 @@
 </div>
 <hr noshade width="100%"/>
 <p>
-  <img src="c:\Users\ASIAH\Downloads\HTML5_logo.png" alt="html5" style="width: 100px;"> </p>
+  <img src="HTML5_logo.png" alt="html5" style="width: 100px;"> </p>
 <h1 style="font-family:garamond; color:rgb(0, 0, 0);"> <font size=5px> <b>HTML5</b></font></h1>
 
 <div class="container">
